loop cut crash #62782

Closed
opened 2019-03-20 16:13:44 +01:00 by Brandon · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.01

Blender Version
Broken: version: 2.80 (sub 50), branch: blender2.7, commit date: 2019-03-20 01:34, hash: 47ba487e05
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

crashes when I add a loop cut inside the mouth (mouth bag).

  • working in wireframe mode
  • using a multiresolution modifier
  • blend file should be attached
    LoopCutCrash.blend
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.01 **Blender Version** Broken: version: 2.80 (sub 50), branch: blender2.7, commit date: 2019-03-20 01:34, hash: `47ba487e05` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] crashes when I add a loop cut inside the mouth (mouth bag). - working in wireframe mode - using a multiresolution modifier - blend file should be attached [LoopCutCrash.blend](https://archive.blender.org/developer/F6855611/LoopCutCrash.blend)
Author

Added subscriber: @Brando77

Added subscriber: @Brando77

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-20 17:43:18 +01:00

Getting an assert:

BLI_assert failed: blender/source/blender/blenlib/intern/BLI_ghash.c:460, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)'

If I ignore the assert it crashes with bt:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00005555573e12ce in sub_v3_v3v3 (r=0x7fffffffcffc, a=0x7fffca8af118, b=0x10)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:442
442		r[0] = a[0] - b[0];
(gdb) bt
#0  0x00005555573e12ce in sub_v3_v3v3 (r=0x7fffffffcffc, a=0x7fffca8af118, b=0x10)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:442
#1  0x00005555573e1a35 in len_squared_v3v3 (a=0x10, b=0x7fffca8af118)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:951
#2  0x00005555573f51fe in slide_origdata_interp_data_vert (sod=0x7fffca2cf130, bm=0x7fffc6a0eb08, is_final=false, sv=0x7fffca8af108)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:6166
#3  0x00005555573f9127 in slide_origdata_interp_data (obedit=0x7fffd0dd5c08, sod=0x7fffca2cf130, sv=0x7fffca8af108, v_stride=80, v_num=18, is_final=false)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:6306
#4  0x0000555557407277 in projectEdgeSlideData (t=0x7fffcd20a908, is_final=false)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:7324
#5  0x000055555743f7ef in recalcData_objects (t=0x7fffcd20a908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_generics.c:820
#6  0x00005555574409df in recalcData (t=0x7fffcd20a908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_generics.c:1131
#7  0x000055555740876f in applyEdgeSlide (t=0x7fffcd20a908, UNUSED_mval=0x7fffcd20aeb0)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:7712
#8  0x00005555573e8a0b in transformApply (C=0x7fffeba29108, t=0x7fffcd20a908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:2725
#9  0x0000555557453392 in transform_modal (C=0x7fffeba29108, op=0x7fffca227448, event=0x7fffca2cf088)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_ops.c:416
#10 0x000055555724b882 in wm_macro_modal (C=0x7fffeba29108, op=0x7fffca2272c8, event=0x7fffca2cf088)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_operator_type.c:393
#11 0x00005555572327ca in wm_handler_operator_call (C=0x7fffeba29108, handlers=0x7fffda658898, handler_base=0x7fffda66d788, event=0x7fffca2cf088,
    properties=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2057
#12 0x000055555723438d in wm_handlers_do_intern (C=0x7fffeba29108, event=0x7fffca2cf088, handlers=0x7fffda658898)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2676
#13 0x000055555723451c in wm_handlers_do (C=0x7fffeba29108, event=0x7fffca2cf088, handlers=0x7fffda658898)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2720
#14 0x0000555557235750 in wm_event_do_handlers (C=0x7fffeba29108)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3071
- 15 0x0000555557229f74 in WM_main (C=0x7fffeba29108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418
- 16 0x0000555557224624 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
Getting an assert: ``` BLI_assert failed: blender/source/blender/blenlib/intern/BLI_ghash.c:460, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)' ``` If I ignore the assert it crashes with bt: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555573e12ce in sub_v3_v3v3 (r=0x7fffffffcffc, a=0x7fffca8af118, b=0x10) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:442 442 r[0] = a[0] - b[0]; (gdb) bt #0 0x00005555573e12ce in sub_v3_v3v3 (r=0x7fffffffcffc, a=0x7fffca8af118, b=0x10) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:442 #1 0x00005555573e1a35 in len_squared_v3v3 (a=0x10, b=0x7fffca8af118) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:951 #2 0x00005555573f51fe in slide_origdata_interp_data_vert (sod=0x7fffca2cf130, bm=0x7fffc6a0eb08, is_final=false, sv=0x7fffca8af108) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:6166 #3 0x00005555573f9127 in slide_origdata_interp_data (obedit=0x7fffd0dd5c08, sod=0x7fffca2cf130, sv=0x7fffca8af108, v_stride=80, v_num=18, is_final=false) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:6306 #4 0x0000555557407277 in projectEdgeSlideData (t=0x7fffcd20a908, is_final=false) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:7324 #5 0x000055555743f7ef in recalcData_objects (t=0x7fffcd20a908) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_generics.c:820 #6 0x00005555574409df in recalcData (t=0x7fffcd20a908) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_generics.c:1131 #7 0x000055555740876f in applyEdgeSlide (t=0x7fffcd20a908, UNUSED_mval=0x7fffcd20aeb0) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:7712 #8 0x00005555573e8a0b in transformApply (C=0x7fffeba29108, t=0x7fffcd20a908) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:2725 #9 0x0000555557453392 in transform_modal (C=0x7fffeba29108, op=0x7fffca227448, event=0x7fffca2cf088) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_ops.c:416 #10 0x000055555724b882 in wm_macro_modal (C=0x7fffeba29108, op=0x7fffca2272c8, event=0x7fffca2cf088) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_operator_type.c:393 #11 0x00005555572327ca in wm_handler_operator_call (C=0x7fffeba29108, handlers=0x7fffda658898, handler_base=0x7fffda66d788, event=0x7fffca2cf088, properties=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2057 #12 0x000055555723438d in wm_handlers_do_intern (C=0x7fffeba29108, event=0x7fffca2cf088, handlers=0x7fffda658898) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2676 #13 0x000055555723451c in wm_handlers_do (C=0x7fffeba29108, event=0x7fffca2cf088, handlers=0x7fffda658898) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2720 #14 0x0000555557235750 in wm_event_do_handlers (C=0x7fffeba29108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3071 - 15 0x0000555557229f74 in WM_main (C=0x7fffeba29108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418 - 16 0x0000555557224624 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```

This issue was referenced by 9105e1d084

This issue was referenced by 9105e1d08467bb1caf9c1f21151579fad3eb3555

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62782
No description provided.