Fix T62782: Edge slide crashes with mirror enabled